# ai_offline_app

./: README.md  chat_page.dart  history_page.dart  llm_engine.dart  main.dart  models.dart  pubspec.yaml  settings_page.dart  storage.dart  theme.dart  upgrade_page.dart
.github/workflows/: build-llama-so.yml
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  bridge.cpp
android/app/src/main/java/<seu/pacote>/: MainActivity.kt
lib/core/: search_service.dart
